src/main/java/com/example/unithon/global/error/exception/ExceptionMessage.java
package com.example.unithon.global.error.exception;

import org.springframework.http.HttpStatus;

public interface ExceptionMessage {

	HttpStatus getHttpStatus();

	String getMessage();
}
